# footui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  input.rs  main.rs
src/data/: fifa.rs  mod.rs  repository.rs  source.rs  sqlite.rs
src/data/migrations/: 202606180001_init.sql  202606180002_sync_metadata.sql  202606180003_standings_fair_play.sql  202606180004_team_rankings.sql
src/data/sync/: coordinator.rs  metadata.rs  mod.rs  policy.rs  resource.rs
src/domain/: ids.rs  matches.rs  mod.rs  standings.rs  stats.rs  team.rs  timeline.rs  tournament.rs
src/ui/: components.rs  countries.rs  facts.rs  home.rs  knockouts.rs  matches.rs  mod.rs  standings.rs  stats.rs
